# convolutional-wasserstein

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
data/images/portraits/: README.md
notebooks/: EA Convolution.ipynb
scripts/: assets.py  convw2.py  demos.py  parallel.py  prepare_portraits.py  viz.py
src/: __init__.py  convolution.py  io.py  mesh.py  post_processing.py  viz.py  wasserstein.py
src/convolutional_wasserstein/: __init__.py  convolution.py  io.py  logging.py  mesh.py  paths.py  post_processing.py  wasserstein.py
tests/: conftest.py  test_convolution.py  test_demos.py  test_grid_solver.py  test_io.py  test_mesh.py  test_post_processing.py  test_wasserstein.py  test_wasserstein_validation.py
